--- a/src/content/blog/针对简历的技术问题模拟.md
+++ b/src/content/blog/针对简历的技术问题模拟.md
@@ -7,6 +7,278 @@ tags:
   - "回答"
 ---
 
+### 为什么重构?有什么痛点 怎么考虑的
+
+### 回答逻辑框架：痛点驱动 -> 选型验证 -> 价值产出
+
+#### 第一层：业务与现状痛点（Why Now?）
+
+**关键词：人力瓶颈、两端差异、迭代压力**
+
+> “做这个重构决策，主要基于当时 B 端业务面临的三个核心痛点：
+> 
+> 1. **研发效能瓶颈：** 我们的 B 端业务（贝壳精工/HOME）逻辑非常复杂，特别是那种千级表单、复杂的作业流。原生开发需要 iOS 和 Android 两拨人写两套极其复杂的业务逻辑，逻辑对齐和测试的成本非常高。
+>     
+> 2. **UI/UX 一致性：** B 端用户对操作效率要求高，但旧版本两端 UI 差异大，导致培训成本高，且新需求上线后，两端经常出现步调不一致的问题。
+>     
+> 3. **维护成本失控：** 随着业务深入，历史代码包袱太重，改一个通用字段需要改动大量文件，回归成本极高。”
+>     
+
+#### 第二层：技术选型逻辑（Why Flutter?）
+
+**关键词：性能刚需、逻辑复用、高性能渲染**
+
+> “在选型上，我们排除了 H5 和 RN，坚定选择 Flutter，是因为 B 端业务的特殊性：
+> 
+> 1. **复杂的交互性能要求：** 简历里提到的‘超大规模表单’和‘地图手势穿透’，如果用 H5 做，在大数据量下的列表滑动和渲染会有明显的卡顿（WebView 的瓶颈）。我们需要 Flutter Skia 引擎带来的接近原生的渲染性能（60FPS）。
+>     
+> 2. **重逻辑复用：** 我们的核心不在于花哨的 UI，而在于复杂的业务校验和状态管理。Flutter 的 Dart 语言让我们能实现 40% 以上的代码复用，特别是业务逻辑层的复用。”
+>     
+
+#### 第三层：重构策略与成果（How & Result?）
+
+**关键词：渐进式重构、防腐层、量化收益**
+
+> “为了控制风险，我采用了**混合栈 + 渐进式重构**的策略：
+> 
+> 1. **架构先行：** 我先设计了‘防腐层’和‘标准化通信中间件’，把原生的图片上传、定位等能力封装好，让上层业务无感知。
+>     
+> 2. **核心攻坚：** 针对最难啃的‘千级检查项表单’和‘AI 助手’新业务进行优先重构，利用 Flutter 的 Widget 树和 Provider 状态管理，把代码结构理顺了。
+>     
+> 3. **最终收益：** 结果证明这个决策是正确的。我们把版本迭代周期缩短了 **25%**，人力成本节省了约 **20%**，并且解决了 iPad 大图 OOM 的顽疾，崩溃率降到了 **0.01%** 的极致水平。”
+
+---
+### 怎么解决的手势冲突?都有哪些冲突 runloop 在这里有什么作用
+
+
+#### 1. 切入场景：明确“痛点”
+
+“关于手势冲突，典型的场景就是我们在做 B 端‘门店地图’业务时。底层是原生的 `MAMapView` (或 `MKMapView`)，上层覆盖了一层 Flutter 渲染的业务卡片。 **痛点在于：** 默认情况下，Flutter 的 `FlutterViewController` 就像一个全屏的透明玻璃，它拦截了所有的触摸事件。导致用户想拖动地图时，手指被 Flutter 这一层截获了，地图动不了；或者我们把触摸透传给地图，Flutter 卡片上的按钮又点击不了了。”
+
+#### 2. 剖析本质：为什么会冲突？
+
+“本质上是因为 iOS 的 **事件响应链 (Responder Chain)** 和 Flutter 的 **手势竞技场 (Gesture Arena)** 是两套独立的机制。 Flutter 作为一个嵌入的 View，对于 iOS 来说是一个黑盒。当触摸发生时，FlutterView 内部的 `UIPanGestureRecognizer` 优先级通常很高，它会‘吃掉’事件，导致底层的 Native View 接收不到 `touches` 回调。”
+
+#### 3. 解决方案层层递进（核心得分点）
+
+**第一步：基于 `UIGestureRecognizerDelegate` 的精准分发**
+
+> “为了解决这个问题，我没有采用简单的 `userInteractionEnabled = NO`（这会导致整个 Flutter 页面不可点），而是深入到了 `UIGestureRecognizerDelegate` 的代理方法进行定制：
+> 
+> 我重写了 `FlutterViewController` 中的手势代理逻辑，特别是 `gestureRecognizer:shouldReceiveTouch:` 方法。 在这个方法里，我建立了一套 **‘位置检测机制’**： 当触摸发生时，我通过 `FlutterEngine` 的 Channel 同步查询当前触摸点 `(CGPoint)` 在 Flutter 侧的渲染树（RenderTree）中，是否命中了可交互的 Widget（比如按钮、列表）。
+> 
+> - **如果命中了 Flutter 控件：** 返回 `YES`，让 Flutter 处理，像常规 APP 一样。
+>     
+> - **如果点在空白处（透明区域）：** 返回 `NO`，这样触摸事件就会通过 iOS 的响应链直接 **穿透** 到下层的 Native MapView，实现了地图的流畅拖动。”
+>     
+
+**第二步：RunLoop 的深度应用（呼应简历亮点）**
+
+> “这里有个棘手的性能问题。普通的 Channel 通信是异步的，而 `shouldReceiveTouch` 是同步调用的。如果等待 Flutter 返回结果，会阻塞主线程，导致掉帧。
+> 
+> 这里的 **RunLoop 治理**主要体现在两个方面：
+> 
+> 1. **事件预判与模式分离：** 针对复杂的嵌套滚动，我利用 RunLoop 的 `UITrackingRunLoopMode`。在手指按下的瞬间（Pre-scroll），我强制主线程 RunLoop 优先处理手势识别器的状态变更，而不是去处理繁重的 UI 布局计算，确保手势识别的响应延迟最低。
+>     
+> 2. **避免主线程竞争：** 在处理 Native 和 Flutter 也就是混合栈滚动的交接时（比如 Flutter 列表滑到底部带动 Native Header 收起），我利用 RunLoop Observer 监听 `BeforeWaiting` 状态，在 RunLoop 即将休眠的空隙去同步两端的 ScrollOffset，而不是在每一帧的回调里硬算，这样保证了渲染的 60FPS，避免了手势抢夺带来的‘顿挫感’。”
+>     
+
+#### 4. 总结成效
+
+“通过这套方案，我们实现了：用户手指在 Flutter 卡片上滑动就是操作列表，一旦滑出卡片区域或者点击空白处，地图立刻响应，整个体验和纯原生开发没有任何区别，完全感觉不到跨平台的存在。”
+
+---
+
+### 面试官可能追问的“死穴” (提前准备)
+
+**Q1: 你刚才说 Channel 通信是异步的，`shouldReceiveTouch` 是同步的，你怎么解决这个时间差？（非常刁钻）**
+
+- **回答方向：**
+    
+    - **方案 A (同步等待，慎用但诚实)：** “早期版本我们确实尝试过利用 `runUntilDate` 这种 RunLoop 机制做短时同步等待，但风险大。”
+        
+    - **方案 B (预加载/快照，推荐)：** “我们后来优化了方案。不是等点击了再问，而是 Flutter 端在布局变化时，通过 Channel 主动把‘可交互区域的 Rect 列表’同步给 Native 端。Native 端持有一份 **‘交互热区图’**。这样在 `shouldReceiveTouch` 时，纯原生的几何计算（`CGRectContainsPoint`）极快，完全不需要实时通信。”
+    - **核心痛点：** iOS 的 `gestureRecognizer:shouldReceiveTouch:` 必须同步返回 `YES/NO`，但 Flutter 的状态在另一个线程，RPC 通信是异步的，肯定来不及。
+	
+	**架构设计：**
+	
+	1. **Dart 端（生产者）：** 我在 Flutter 端实现了一个 `HitTestRegistry`。利用 `WidgetsBinding.instance.addPostFrameCallback` 监听每一帧的渲染结束。 在布局完成后，我遍历那些‘需要拦截手势’的关键组件（比如悬浮卡片），通过 `RenderObject.localToGlobal` 获取它们在屏幕上的绝对坐标区域（Rect）。
+    
+	2. **通信层（管道）：** 只有当这些 Rect 发生**变化**时（通过 Diff 算法对比），我才通过 MethodChannel 将这份 `List<Rect>` 数据序列化推送到 Native 端。
+    
+	3. **Native 端（消费者）：** 在 iOS 侧，我持有一个轻量级的 `std::vector<CGRect>` 或 `NSArray` 缓存。 当 `shouldReceiveTouch` 触发时，我不需要去问 Flutter，而是直接遍历本地这份缓存列表，判断 `CGRectContainsPoint`。
+    
+	
+	**收益：** 这个判定是纯内存计算，耗时在微秒级，完全不会阻塞主线程，完美解决了跨线程通信的时延问题。”
+        
+	
+	**Q2: 嵌套滚动（Nested Scrolling）的具体冲突怎么解决的？**
+	
+	- **回答方向：** “核心是**手势共存** (`shouldRecognizeSimultaneouslyWithGestureRecognizer`)。
+    
+    - 我们允许 Native 的 ScrollView 手势和 Flutter 的 Pan 手势同时识别。
+        
+    - 然后通过一个 **‘协调器 (Coordinator)’** 对象，根据滑动的 `contentOffset` 决定谁真正消费这个位移。
+        
+    - 比如：当 Flutter 列表到顶了，Coordinator 就把剩下的滑动距离传给 Native Header 进行折叠。这有点像 Android 的 `CoordinatorLayout` 机制，只是我们需要自己实现一套跨端的。”
+---
+###  有关Instruments (Allocations/Time Profiler)、LLDB 调试；熟悉 CI/CD 自动化流程的问题
+针对“工具与工程化”这一块，对于**资深/专家岗**，面试官绝对不会问“Instruments 怎么打开”或者“断点怎么打”这种入门问题。
+
+他们会侧重考察：**由点到面的排查思路、复杂场景下的定点爆破能力、以及如何通过工具提升团队效率**。
+
+以下我为你整理了三个维度的**高频面试题**及**专家级回答思路**：
+
+---
+**面试官：** “能具体讲讲你设计的 Flutter 防腐层吗？”
+
+ “为了解决混合栈开发中 Flutter 业务与 iOS 底层实现强耦合的问题，我设计了一套**基于 Adapter 模式的三层防腐体系**。这套体系的核心目标是：**让 Flutter 侧只依赖稳定的协议，而屏蔽 Native 侧多变的实现细节。**”
+
+#### 第一层：统一容器与上下文注入（解决路由与环境一致性）
+
+> “首先是**入口层的防腐**。 之前的痛点是每个业务都自己去创建 `FlutterViewController`，参数拼装五花八门，生命周期管理也很乱。 我设计了一个 **`UnifiedContainer` (也就是代码中的 BaseVC)**：
+> 
+> - **收口流量：** 所有的 Flutter 页面必须通过这个统一容器加载。
+>     
+> - **参数标准化：** 容器强制将原生路由参数、环境配置转换为标准的 JSON 格式注入 Flutter，业务方不需要关心是通过 `init` 传还是 `setInitialRoute` 传。
+>     
+> - **生命周期对齐：** 容器统一接管了 `viewWillAppear`、`DidEnterBackground` 等事件，解决了混合栈常见的页面状态不同步问题。”
+>     
+
+#### 第二层：通信网关与插件治理（解决通道爆炸与崩溃）
+
+> “其次是**通信链路的防腐**。 很多项目随着迭代，Channel 满天飞，插件注册逻辑散落在各个角落，很容易出现注册冲突导致的 Crash（我们之前就遇到过插件重复注册导致的崩溃）。 我引入了 **`FlutterAdapter` 中间件机制**：
+> 
+> - **单通道多路复用：** 我只暴露一条核心的 `CoreChannel`，所有的通用能力（Toast、导航、登出）都通过消息类型（Message Type）分发，而不是开几十个 Channel。
+>     
+> - **统一注册中心：** 我把插件注册（Plugin Registry）和引擎句柄（Messenger/Texture）的管理封装在 Adapter 单例中。**所有的插件必须在 Adapter 的 Block 中注册**，彻底杜绝了因为注册时机和顺序错乱导致的 Native Crash。”
+>     
+
+#### 第三层：服务抽象与门面模式（解决 SDK 变动风险）
+
+> “最后是**底层能力的防腐**。 原生 SDK（如定位、推送、上传）经常升级或更换（比如从百度地图切高德），如果 Flutter 直接调 SDK API，改动就是灾难性的。 我采用了 **Facade（门面）模式**：
+> 
+> - **能力接口化：** 我们在 Native 层封装了 `LocationService`、`ImageService` 等抽象服务。
+>     
+> - **隔离变化：** Flutter 只和这些 Service 定义的协议交互。底层的 `DWCLLocationManager` 怎么初始化、怎么请求权限，完全由 Native 层的 Service 实现。这样即使底层 SDK 换了，Flutter 业务代码一行都不用改。”
+>     
+
+---
+
+### 亮点补充：如果不做这一层会怎样？（反面论证）
+
+如果面试官问“有必要搞这么复杂吗？”，你可以结合你提供的“风险分析”来回答，这非常有说服力：
+
+“非常有必要。在落地这套架构前，我们不仅维护成本高，还遇到过几个严重问题：
+
+1. **稳定性隐患：** 之前因为缺乏统一的插件注册管控，出现过 GeneratedPluginRegistrant 重复注册导致的线上崩溃。
+    
+2. **代码腐化：** 业务线为了赶进度，直接在 Flutter 里写死 Native 的类名和参数。一旦原生重构个别 API，Flutter 端几十个文件报错，回归成本极高。
+    
+3. **生命周期 Bug：** 没有统一容器时，页面退出或后台切换时，资源释放不及时，导致过内存泄漏。 所以这层防腐层本质上是用**架构的确定性**去对抗**业务迭代的不确定性**。”
+---
+
+### 第一维度：Instruments 深度性能调优
+
+**核心考察点：** 内存治理（OOM）、卡顿分析、方法论。
+
+#### Q1: “你简历提到解决了 OOM 难题，在 Instruments 中你是如何区分‘内存泄漏’和‘内存堆积’（Abandoned Memory）的？针对大图 OOM，通过 Allocations 怎么定位？”
+
+**回答策略（结合你的大图优化案例）：**
+
+- **区分概念：** 内存泄漏是对象没有被释放（Leaks 工具能抓到）；但更可怕的是 **Abandoned Memory（废弃内存）**，即对象还在引用链上但已无用（Leaks 抓不到）。
+    
+- **操作技巧（关键点）：**
+    
+    > “我通常使用 Allocations 的 **Mark Generation (分代分析)** 功能。
+    > 
+    > 1. **场景复现：** 在进入由于大图导致 OOM 的页面前，点击 ‘Mark Generation’ 打个桩（Generation A）。
+    >     
+    > 2. **反复操作：** 进入页面浏览大图，退出，再点 Mark（Generation B）。重复 3-5 次。
+    >     
+    > 3. **对比增量：** 观察 Generation 之间的 **Persistent Bytes**。如果每次进出，内存都在净增加，且查看详情发现全是 `VM: ImageIO_PNG_Data` 或 `CVPixelBuffer`，那就说明图片解码缓存没有被正确清理。
+    >     
+    > 4. **定位代码：** 钻取到具体的 Call Tree，勾选 ‘Invert Call Tree’ 和 ‘Hide System Libraries’，直接定位到是我们自定义的 ImageCache 单例一直持有大图数据，没有触发 LRU 淘汰。”
+    >     
+    
+
+#### Q2: “在使用 Time Profiler 做启动优化时，你是如何处理‘系统消耗’和‘自身代码’的？遇到耗时很短但在主线程频繁调用的方法怎么优化？”
+
+**回答策略：**
+
+- **操作细节：** 强调配置参数，如 **Sample Interval**（采样间隔，高频调用建议设为 1ms 以防漏掉）。
+    
+- **分析思路：**
+    
+    > “启动优化时，我会开启 Time Profiler 的 **'Separate by Thread'**，只看 Main Thread。 遇到**‘碎片化耗时’**（单个方法不慢，但执行几千次）： 比如在解析 JSON 时，发现 `objc_msgSend` 占用极高。我会查看 Call Tree，发现是因为为了容错，我们在模型解析层频繁使用了 `respondsToSelector` 或者频繁创建 `NSDateFormatter`。 **解决方案：** 将 `NSDateFormatter` 做成静态单例；或者利用 RunLoop 的空闲时机（Idle）去分批处理非关键数据的预加载，把主线程的时间片抢回来。”
+    
+
+---
+
+### 第二维度：LLDB 高级调试与 Runtime
+
+**核心考察点：** 逆向思维、无源码调试、动态修改状态。
+
+#### Q3: “除了 `po`，你平时还用过哪些高级 LLDB 命令？如果线上有一个 Crash，但复现不了，只能拿到崩溃时的寄存器信息，你怎么分析？”
+
+**回答策略（展示底层能力）：**
+
+- **常用高级命令：**
+    
+    - `expression` (简写 `e` / `p`): 动态修改变量值。
+        
+    - `watchpoint set expression &address`: 内存断点（**杀手锏**，用于查谁非法修改了某个变量）。
+        
+    - `image lookup -a Address`: 也就是通过崩溃堆栈地址找对应代码行。
+        
+- **寄存器分析（秀肌肉）：**
+    
+    > “如果是 Release 包的崩溃，我通常会结合 **ARM64 调用约定**来分析。 比如 `objc_msgSend` 挂了，我会看 `$x0`（Receiver）和 `$x1`（Selector）。 在 LLDB 里输入 `register read x0`，如果发现是 `0x0` 或者野指针，就能推断是给空对象发消息或者是访问了僵尸对象。如果是野指针，配合 `Zombies` 开启或者 `Malloc Stack` 记录来回溯对象的释放历史。”
+    
+    
+
+---
+
+### 第三维度：CI/CD 工程化与提效
+
+**核心考察点：** 自动化流水线、构建速度优化、质量门禁。
+
+#### Q4: “你提到熟悉 CI/CD，在贝壳你们的自动化流程主要包括哪些环节？你是如何优化打包时间的？”
+
+**回答策略（结合架构师视角）：**
+
+- **全流程描述：**
+    
+    > “我们的 CI/CD 基于 **GitLab CI + Jenkins + Fastlane**。 流程不仅是‘打包’，而是 **Quality Gate（质量门禁）**： MR 提交 -> 触发静态扫描（OCLint/Dart Analyze） -> 单元测试 -> 二进制大小阈值检查 -> 自动打测试包 -> 上传蒲公英/TestFlight -> 通知飞书群。”
+    
+	- **构建优化（干货）：**
+    
+    > “针对编译慢的问题，我做了几个层面的优化：
+    > 
+    > 1. **编译产物缓存：** 引入了 CCache（或者 Bazel/Buck 如果你们用过），缓存 .o 文件，增量编译速度提升 50%。
+    >     
+    > 2. **二进制化：** 针对贝壳这种大工程，我推动了**组件二进制化**方案。除了业务代码，底层的网络库、UI 库全部预编译成 XCFramework，链接时间大幅缩短。
+    >     
+    > 3. **头文件搜寻优化：** 修正 `User Header Search Paths`，减少编译器的递归搜索范围。”
+    >     
+    
+
+---
+
+### 如果面试官问：“你觉得工具对架构师意味着什么？”
+
+**总结升华的回答（配合你的“极致追求”人设）：**
+
+> “我觉得工具是架构师的**‘显微镜’和‘手术刀’**。
+> 
+> 很多初级工程师只关注功能实没实现，而架构师需要通过 Instruments 看到内存的水位、CPU 的波峰；通过 LLDB 看到 Runtime 的本质。
+> 
+> 同时，**CI/CD 是架构师意志的延伸**。我不可能每天去 Review 每一行代码的格式，但我可以通过自动化的 Lint 和测试流水线，把我的架构规范强制落地到团队的每一次提交中。这就是从‘个人能力’到‘团队工程化’的转变。”
+
+
+---
+
+
 ### 维度一：Flutter 与混合架构
 
 #### 1. 混合栈管理与内存泄漏
