--- a/src/content/blog/针对简历的技术问题模拟.md
+++ b/src/content/blog/针对简历的技术问题模拟.md
@@ -136,32 +136,92 @@ tags:
 
 #### 第一层：统一容器与上下文注入（解决路由与环境一致性）
 
-> “首先是**入口层的防腐**。 之前的痛点是每个业务都自己去创建 `FlutterViewController`，参数拼装五花八门，生命周期管理也很乱。 我设计了一个 **`UnifiedContainer` (也就是代码中的 BaseVC)**：
-> 
-> - **收口流量：** 所有的 Flutter 页面必须通过这个统一容器加载。
->     
-> - **参数标准化：** 容器强制将原生路由参数、环境配置转换为标准的 JSON 格式注入 Flutter，业务方不需要关心是通过 `init` 传还是 `setInitialRoute` 传。
->     
-> - **生命周期对齐：** 容器统一接管了 `viewWillAppear`、`DidEnterBackground` 等事件，解决了混合栈常见的页面状态不同步问题。”
->     
+———
 
-#### 第二层：通信网关与插件治理（解决通道爆炸与崩溃）
+  1. 背景与目标
 
-> “其次是**通信链路的防腐**。 很多项目随着迭代，Channel 满天飞，插件注册逻辑散落在各个角落，很容易出现注册冲突导致的 Crash（我们之前就遇到过插件重复注册导致的崩溃）。 我引入了 **`FlutterAdapter` 中间件机制**：
-> 
-> - **单通道多路复用：** 我只暴露一条核心的 `CoreChannel`，所有的通用能力（Toast、导航、登出）都通过消息类型（Message Type）分发，而不是开几十个 Channel。
->     
-> - **统一注册中心：** 我把插件注册（Plugin Registry）和引擎句柄（Messenger/Texture）的管理封装在 Adapter 单例中。**所有的插件必须在 Adapter 的 Block 中注册**，彻底杜绝了因为注册时机和顺序错乱导致的 Native Crash。”
->     
+  “在我们的项目里，需要在原生 iOS 应用中无缝嵌入 Flutter 页面，一方面要保留既有的 Objective‑C 路由框架（LJRouter），另
 
-#### 第三层：服务抽象与门面模式（解决 SDK 变动风险）
+  一方面要屏蔽 Flutter 底层细节，保证两端业务代码互不污染，这就是我设计防腐层的出发点。”
 
-> “最后是**底层能力的防腐**。 原生 SDK（如定位、推送、上传）经常升级或更换（比如从百度地图切高德），如果 Flutter 直接调 SDK API，改动就是灾难性的。 我采用了 **Facade（门面）模式**：
-> 
-> - **能力接口化：** 我们在 Native 层封装了 `LocationService`、`ImageService` 等抽象服务。
->     
-> - **隔离变化：** Flutter 只和这些 Service 定义的协议交互。底层的 `DWCLLocationManager` 怎么初始化、怎么请求权限，完全由 Native 层的 Service 实现。这样即使底层 SDK 换了，Flutter 业务代码一行都不用改。”
->     
+  ———
+
+  2. 总体分层与职责
+
+  “我把防腐层拆成三大块：
+
+  3. Adapter 层：统一插件注册与通信接口
+
+  4. Container 层：承载 Flutter 页面、注入路由参数并设置 MethodChannel（可选）
+
+  5. 路由注册：借助 LJRouter 宏，让业务侧像打开普通页面一样打开 Flutter 页面”
+
+  6. Adapter 层——屏蔽 Flutter 细节
+
+  - 单例管理：FlutterAdapter 实现 FlutterPluginRegistry，维护一个 pluginPublications 字典和 pluginDelegates 数组。
+
+  - 统一注册入口：通过 pluginRegisterBlock 回调把所有插件注册逻辑聚合到一起，不让业务侧到处散落
+
+    registerWithRegistrar:。
+
+  - 隐藏 Messenger/Texture：对外只暴露 binaryMessenger 和 textures API，Flutter 内部 Channel、Texture 注册都集中在
+
+    Adapter 里完成。
+
+  4. Container 层——页面隔离与通道管理
+
+
+  > 带通道容器：
+
+  >
+
+  > - FlutterBaseViewController.{h,m}
+
+  >     - 将路由参数字典 JSON 化后赋值给 initialRoute，并以子控制器方式承载 Flutter 页面。
+
+  >     - 在名为 flutter_decoration_plugin 的 FlutterMethodChannel 上统一处理 Flutter→原生调用（隐藏导航栏、弹吐司、返
+
+  >       回、登出、获取版本号等）。
+
+  
+
+  > 轻量无通道容器：
+
+  >
+
+  > - FlutterBaseNoChannelViewController.{h,m}
+
+  >     - 只做参数传递和页面展示，不额外开通双向通信，适合纯静态内容场景。
+
+  
+
+  这种设计让业务层只关注打开哪个容器、传什么参数，Flutter 与原生的耦合点被严格控制在这两套容器中。
+
+  5. 路由集成——LJRouter 宏注册
+
+  “两种容器都通过 LJRouterInit(...) 宏在原生路由表里注册，业务只要调 LJRouter.open(Flutter_Base_View_Container,
+
+  params…)，就像打开普通原生页面一样，无需关心底层 Flutter 引擎的初始化和插件注册过程。”
+
+
+  6. 参数与通信约定
+
+  - 统一格式：所有参数先组装成字典，再用 NSJSONSerialization 转成去空格/无换行的 JSON 串，拼给 initialRoute。
+
+  - 双向通信：Flutter 侧只需解析 initialRoute，完成页面初始化；需要调用原生时通过预定义的 MethodChannel 方法名约定即
+
+    可。
+
+  7. 设计价值与扩展性
+
+
+  - 解耦高内聚：Flutter 相关逻辑全部集中在 Adapter+Container，两端业务代码互不影响
+
+  - 可复用：新增插件只需在 pluginRegisterBlock 里注册一次，所有 Flutter 页面都可复用
+
+  - 兼容现有路由：无侵入原生路由体系，降低学习成本
+
+  - 灵活选配：既能做纯展示，也能做复杂交互，满足多种业务场景
 
 ---
 
